add font and color styling to css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
 
 
 <body>
-    
+    <div class="header">
+        <p>hello</p>
+    </div>
+
+        <div class="container1">
+            <p>how</p>
+        </div>
+
+        <div class="containter2">
+            <p>are</p>
+        </div>
+        
+        <div class="container3">
+            <p>you</p>
+        </div>
+
+    <div class="footer">
+        <p>goodbye</p>
+    </div>
 </body>
 
 
