rename img file. add flex elements to first two sections of html page

--- a/index.html
+++ b/index.html
@@ -10,15 +10,26 @@
 
 <body>
     <div class="header">
-        <p>hello</p>
+        <p>Header Logo</p>
     </div>
 
         <div class="container1">
-            <p>how</p>
+            <div class="about">
+            <h2>This Website is awesome</h2>
+            <p>This website has some subtext that goes here under the main title 
+                It's smaller font and the color is lower contrast</p>
+            
+            </div>
+            <img src="../flex-project/images/nothing-changed.png">
         </div>
 
-        <div class="containter2">
-            <p>are</p>
+        <div class="container2">
+            <p>Random Information</p>
+            <div class="info">
+                <img src="../flex-project/images/summer.png">
+                <img src="../flex-project/images/twilight.png">
+                <img src="../flex-project/images/winter.png">
+            </div>
         </div>
         
         <div class="container3">
