add more flex elements and formating to third section of html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
         </div>
         
         <div class="container3">
-            <p>you</p>
+            <div class="quote">
+            <p>
+                This is a testamonial or just a way to fill up space.
+                someone may read this or they may not.
+                All i know is it looks nice here.
+            </p>
+            </div>
         </div>
 
     <div class="footer">
