reformat css and html for better organization. add links to header of html.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 
 <body>
     <div class="header">
-        <p>Header Logo</p>
+        <div class="logo">
+            <p>Header Logo</p>
+        </div>
+            <div class="links">
+                <a href="#">link one</a>
+                <a href="#">link two</a>
+                <a href="#">link three</a>
+            </div>
     </div>
 
         <div class="container1">
@@ -18,7 +25,7 @@
             <h2>This Website is awesome</h2>
             <p>This website has some subtext that goes here under the main title 
                 It's smaller font and the color is lower contrast</p>
-            
+                <button>sign up!</button>
             </div>
             <img src="../flex-project/images/nothing-changed.png">
         </div>
@@ -26,6 +33,7 @@
         <div class="container2">
             <p>Random Information</p>
             <div class="info">
+                <img src="../flex-project/images/nothing-changed.png">
                 <img src="../flex-project/images/summer.png">
                 <img src="../flex-project/images/twilight.png">
                 <img src="../flex-project/images/winter.png">
@@ -43,7 +51,11 @@
         </div>
 
     <div class="footer">
-        <p>goodbye</p>
+        <div class="box">
+            <p>Call to action! It's time!</p>
+            <p>sign up for our product by clicking that button over there!</p>
+            <button>Sign up</button>
+        </div>
     </div>
 </body>
 
