more tweeking of the css to fine-tune formating on html. style buttons and links.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
 
         <div class="container1">
             <div class="about">
-            <h2>This Website is awesome</h2>
-            <p>This website has some subtext that goes here under the main title 
-                It's smaller font and the color is lower contrast</p>
-                <button>sign up!</button>
+                <h2>This Website is awesome</h2>
+                    This website has some subtext that goes here under the main title 
+                    It's smaller font and the color is lower contrast
+                    <div class="sign-up">
+                        <button>Sign up</button>
+                    </div>
             </div>
             <img src="../flex-project/images/nothing-changed.png">
         </div>
@@ -52,9 +54,17 @@
 
     <div class="footer">
         <div class="box">
-            <p>Call to action! It's time!</p>
-            <p>sign up for our product by clicking that button over there!</p>
-            <button>Sign up</button>
+            <div class="box-box">
+                <div class="box-head">
+                    Call to action! It's time!
+                </div>
+                    <div class="box-cont">
+                        sign up for our product by clicking that button over there!
+                    </div>
+            </div>
+                <div class="sign-up2">
+                    <button>Sign up</button>
+                </div>
         </div>
     </div>
 </body>
