add last footer copywrite section and format with css

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </div>
 
-    <div class="footer">
+    <div class="container4">
         <div class="box">
             <div class="box-box">
                 <div class="box-head">
@@ -66,6 +66,10 @@
                     <button>Sign up</button>
                 </div>
         </div>
+    </div>
+
+    <div class="footer">
+        Copyright © The Odin Project 2024
     </div>
 </body>
 
