add new class for images and add text discriptions

--- a/index.html
+++ b/index.html
@@ -35,10 +35,30 @@
         <div class="container2">
             <p>Random Information</p>
             <div class="info">
-                <img src="../flex-project/images/nothing-changed.png">
-                <img src="../flex-project/images/summer.png">
-                <img src="../flex-project/images/twilight.png">
-                <img src="../flex-project/images/winter.png">
+                <div class="painting">
+                    <img src="../flex-project/images/nothing-changed.png">
+                    Nothing Changed<br>
+                    Oil on Canvas<br>
+                    8" x 10"<br>
+                </div>
+                <div class="painting">
+                    <img src="../flex-project/images/summer.png">
+                    Summer<br>
+                    Acrylic on Canvas<br>
+                    8" x 10"<br>
+                </div>
+                <div class="painting">
+                    <img src="../flex-project/images/twilight.png">
+                    Twilight<br>
+                    Oil on Canvas<br>
+                    8" x 10"<br>
+                </div>
+                <div class="painting">
+                    <img src="../flex-project/images/winter.png">
+                    Winter<br>
+                    Oil on Jute<br>
+                    8" x 10"<br>
+                </div>
             </div>
         </div>
         
